fix wrong font

--- a/error/style.css
+++ b/error/style.css
@@ -3,9 +3,9 @@
 }
 
 @font-face {
-    font-family: "Mungil";
-    src: url("../fonts/Mungil-Regular.ttf");
-    /* Source: https://www.dafont.com/de/mungil.font */
+    font-family: "Makisupa";
+    src: url("fonts/makisupa.ttf");
+    /* src: https://www.dafont.com/makisupa.font */
 }
 
 body {
